--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1{
+  font-family: "Khand", sans-serif;
+}
+p{
+  font-family: "Roboto", sans-serif;
+}
+
+
+
+.banner{
+  /* banner */
+
+width: 100%;
+height: 28rem;
+
+background: url(./IMG/banner.png);
+background-size:cover;
+filter: drop-shadow(0px 1px 30px rgba(36, 36, 36, 0.1));
+
 }
