--- a/src/Formulario/Form.css
+++ b/src/Formulario/Form.css
@@ -1,95 +1,55 @@
-a{
-  text-decoration: none;
-  color: black;
-  cursor: pointer;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 1rem;
-
-  width: 90%;
-
-  /* border: #0056b3 1px solid; */
-}
-
-.form label {
-  margin-bottom: 1rem;
-  width: 100%;
-  max-width: 400px;
-  text-align: left;
-}
-
-.form input,
-.form textarea {
-  width: 15rem;
-  height: 2rem;
-  border: none;
-  border-radius: 10px;
-
-  padding: 0.5rem;
-
-  background-color: #d6d6d6;
-}
-
-.form button {
-  /* margin-top: 1rem; */
-  width: 100%;
-  height: 2.5rem;
-  border: none;
-  border-radius: 10px;
-  background-color: #FE7153;
-  color: white;
-  cursor: pointer;
-}
-
-.form button:hover {
-  background-color: #0056b3;
+a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
 }
 
 .box-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-  margin: 2rem;
-
-  width: 18rem;
-  height: 16rem;
-  border-radius: 16px;
-  box-shadow:
-    rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-    #FE7153 0px -3px 0px inset;
-
-  background-color: whitesmoke;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 16px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, #fe7153 0px -3px 0px inset;
 }
 
-.container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin-top: 1rem;
+.event-infos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
 .icon-div {
-  display: flex;
-  justify-content: start;
-  align-items: center;
+    display: flex;
+    align-items: center;
+    flex: 1;
+}
 
-  width: 60%;
+.icon-div:nth-child(1) {
+    justify-content: flex-start;
+}
 
-  margin: 3px;
+.icon-div:nth-child(2) {
+    justify-content: center;
+}
+
+.icon-div:nth-child(3) {
+    justify-content: flex-end;
+}
+
+.sign-up-btn {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #fe7153;
+    color: #fff;
+    border-radius: 8px;
+    border: none;
+    text-align: center;
+    cursor: pointer;
 }
 
 .icon-form {
-  width: 1.5rem;
-  height: auto;
-  margin-right: 1rem;
+    margin-right: 1rem;
 }
