--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,23 @@
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
-h1{
+body {
+  background-color: #F9F9F9;
+}
+
+h1 {
   font-family: "Khand", sans-serif;
 }
-p{
+
+p {
   font-family: "Roboto", sans-serif;
 }
 
-
-
-.banner{
-  /* banner */
-
-width: 100%;
-height: 28rem;
-
-background: url(./IMG/banner.png);
-background-size:cover;
-filter: drop-shadow(0px 1px 30px rgba(36, 36, 36, 0.1));
-
+.container {
+  width: min(90%, 1000px);
+  margin: 0 auto;
 }
