--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -1,102 +1,106 @@
-.background{
-    position: relative;
-    background-color: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 90rem;
-    width: 100%;
-
-    background-image: url(../IMG/background.png);
-
+.background {
+    background: url(../IMG/background-2.png);
     background-size: cover;
     background-position: center;
-
-    overflow: hidden;
+    background-repeat: no-repeat;
+    padding: 5rem 0;
 }
 
-.background::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Cor preta com 50% de opacidade */
-    z-index: 1; /* Coloca a sobreposição acima da imagem de fundo */
-}
-
-.background > * {
-    position: relative;
-    z-index: 2;
-}
-
-.card{
+.card {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 1rem;
-    padding: 1rem;
-    width: 85%;
-    height: 40rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 
-    margin: 2rem;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: #fe7153 0px -4px 0px inset;
+    background-color: rgba(30, 30, 30, 0.48);
 
-    box-shadow:
-    /* rgba(0, 0, 0, 0.4) 0px 2px 4px, */
-    /* rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, */
-    #FE7153 0px -4px 0px inset;
-
-    /* border: black 2px solid; */
-
-    background-color: rgba(0, 0, 0, 0.567);
+    color: #fff;
 }
 
-.box-image1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-    width: 100%;
-    height: 50%;
-    background-color: #fff;
-    border-radius: 1rem;
-
-    background-image: url(../IMG/boximg1.jpg);
-    background-size: cover;
-}
-
-.box-image2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-    width: 100%;
-    height: 50%;
-    background-color: #fff;
-    border-radius: 1rem;
-
-    background-image: url(../IMG/boximg2.jpg);
-    background-size: cover;
-}
-
-.card h1{
+.card h2,
+.card b {
+    font-family: "Khand", sans-serif;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 50px;
     text-align: center;
     color: white;
     margin-bottom: 0.5rem;
 }
 
-.card p{
-    text-align: center;
-    color: white;
+.card b {
+    font-weight: 700;
+}
 
+.card:nth-child(1),
+.card:nth-child(2) {
+    margin-bottom: 2rem;
+}
+
+.card:nth-of-type(odd) h2,
+.card:nth-of-type(odd) p {
+    text-align: right;
+}
+
+.card:nth-child(2) {
+    flex-direction: row-reverse;
+}
+
+.card:nth-child(2) h2,
+.card:nth-child(2) p {
+    text-align: left;
+}
+
+.card p {
+    font-size: 20px;
     font-family: "Roboto", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
+    padding-bottom: 1.5rem;
+}
 
-    font-size: 1.1rem;
+.box-text {
+    width: 50%;
+    padding: 10px;
+}
 
+.card:nth-child(1) .box-text,
+.card:nth-child(3) .box-text {
+    margin-left: 15px;
+}
+
+.card:nth-child(2) .box-text {
+    margin-right: 15px;
+}
+
+.box-image {
+    width: 50%;
+}
+
+@media only screen and (max-width: 999px) {
+    .card {
+        flex-direction: column !important;
+    }
+
+    .card h1,
+    .card p {
+        text-align: center !important;
+    }
+
+    .card .box-text {
+        margin: 0 !important;
+        width: 100%;
+    }
+
+    .card .box-image {
+        width: 100%;
+        max-width: 100%;
+        text-align: center;
+    }
+
+    .card .box-image img {
+        width: 100%;
+        max-width: 100%;
+    }
 }
