--- a/src/FAQ/FAQ.css
+++ b/src/FAQ/FAQ.css
@@ -4,6 +4,15 @@
     font-family: Arial, sans-serif;
 }
 
+.faq-container h2 {
+    text-align: center;
+    font-family: "Khand", sans-serif;
+    font-weight: 600;
+    font-size: 2.5rem;
+
+    margin-top: 1rem;
+}
+
 .faq-list {
     margin-top: 20px;
 }
