--- a/src/Formulario/Form.css
+++ b/src/Formulario/Form.css
@@ -8,11 +8,9 @@ a {
     padding: 20px;
     background-color: #fff;
     border-radius: 16px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, #fe7153 0px -3px 0px inset;
-    margin-bottom: 2rem;
-    /* position: sticky; */
-    top: 30px;
+    border-left: 3px solid #222;
+    border-right: 3px solid #222;
+    margin: 2rem auto;
 }
 
 .event-infos {
@@ -21,6 +19,13 @@ a {
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 20px;
+    transition: all 0.3s;
+}
+
+.event-infos p {
+    font-family: 'Khand', sans-serif;
+    font-size: 16px;
+    letter-spacing: 1px;
 }
 
 .icon-div {
@@ -44,15 +49,23 @@ a {
 }
 
 .sign-up-btn {
+    font-family: 'Khand', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
     display: block;
     width: 100%;
     padding: 10px;
     background-color: #fe7153;
     color: #fff;
-    border-radius: 8px;
+    border-radius: 50px;
     border: none;
     text-align: center;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.sign-up-btn:hover {
+    transform: scale(1.005);
 }
 
 .icon-form {
