--- a/src/GoogleFormsPopUp/GoogleFormsPopUp.css
+++ b/src/GoogleFormsPopUp/GoogleFormsPopUp.css
@@ -6,7 +6,7 @@
     right: 0;
     background: rgba(0, 0, 0, 0.7);
     transition: opacity 0.5s;
-    z-index: 999;
+    z-index: 9999999;
 }
 
 .popup-content {
