--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -56,10 +56,9 @@
 }
 
 .card p {
-    font-size: 20px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
 }
 
 .box-text {
@@ -81,6 +80,8 @@
 }
 
 .box-image img {
+    width: 100%;
+    border-radius: 16px;
     transition: 0.3s;
     cursor: pointer;
 }
